# EpicNES

./: .gitignore  CMakeLists.txt  README.md
include/: apu.h  console_debug.h  cpu.h  dma.h  emulator.h  mapper.h  mapper_base.h  memory.h  memory_map.h  nes_defs.h  nrom.h  ppu.h  ring_buffer.h  rom.h  sdl_audio_buffer.h  standard_controller.h
include/mapper/: cnrom.h  mapper.h  mapper_base.h  mappers.h  mmc1.h  nrom.h  uxrom.h
src/: apu.c  console_debug.c  cpu.c  dma.c  emulator.c  main.c  mapper_base.c  memory.c  nrom.c  ppu.c  ring_buffer.c  rom.c  sdl_audio_buffer.c  standard_controller.c
src/app/: main.cpp
src/app/widgets/: FileDialog.cpp  FileDialog.h
src/mapper/: mapper.c  mapper_base.c  mmc1.c  nrom.c  uxrom.c
test/cpu/: cputest.c  nestest.c  test.c
test/cpu/include/: cputest.h
